--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: postgres:14.3
     restart: always
     ports:
-      - '5433:5432'
+      - '5432:5432'
     environment:
-      POSTGRES_PASSWORD: ${pass}
-      POSTGRES_DB: ${name}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     container_name: ocso_db
     volumes:
       - ./postgres:/var/lib/postgresql/data
